
## Fixes
- Windows console: fix possible hang if the console returns a too-small window width (for any reason)
- `createitem`: output items will now end up at look cursor if active
- `spectate`: don't allow temporarily modified announcement settings to be written to disk when "auto-unpause" mode is enabled
- `changevein`: fix a crash that could occur when attempting to change a vein into itself

## Misc Improvements
- `spectate`: player-set configuration is now stored globally instead of per-fort
- `autobutcher`: treat animals on restraints as unavailable for slaughter
- `stockpiles`: add property filters for brewable, millable, and processable (e.g. at a Farmer's workshop) organic materials

## Documentation
- `stonesense-art-guide`: guide for making sprite art for Stonesense

## API
- ``Military::removeFromSquad``: removes unit from any squad assignments
- ``Buildings::checkFreeTiles``: now replaces the extents parameter for a building pointer
- ``Units::isUnitInBox``, ``Units::getUnitsInBox``: don't include inactive units
- ``Items::getItemBaseValue``: DF 51.06 reduced the base value of prepared meals
- ``Items::getValue``: magical powers now correctly contribute to item value

## Lua
- ``dfhack.units.setAutomaticProfessions``: sets unit labors according to current work detail settings
- ``dfhack.military.removeFromSquad``: Lua API for ``Military::removeFromSquad``
- ``gui.dwarfmode``: adventure mode cursor now supported in ``getCursorPos``, ``setCursorPos``, and ``clearCursorPos`` funcitons
- ``dfhack.buildings.checkFreeTiles``: now replaces the extents parameter for a building pointer
- ``overlay.isOverlayEnabled``: new API for querying whether a given overlay is enabled
- ``overlay``: widgets can now declare ``overlay_onenable`` and ``overlay_ondisable`` functions to hook enable/disable

## Removed

# 51.06-r1

## Misc Improvements
- Compatibility with DF 51.06

# 51.05-r1

## Misc Improvements
- Compatibility with DF 51.05

# 51.04-r1.1

## Fixes