@@ -65,6 +65,7 @@ Template for new versions:
 - `createitem`: output items will now end up at look cursor if active
 - `spectate`: don't allow temporarily modified announcement settings to be written to disk when "auto-unpause" mode is enabled
 - `changevein`: fix a crash that could occur when attempting to change a vein into itself
+- `overlay`: reset draw context between rendering widgets so context changes can't propagate from widget to widget
 
 ## Misc Improvements
 - `spectate`: player-set configuration is now stored globally instead of per-fort
